@@ -134,10 +134,11 @@
 
     <target name="compile.main.java" depends="generate-lang-parser, generate-task-filter-parser">
         <javac destdir="${dir.build.class.main.java}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.main.java}"/>
             <src path="${dir.build.java.smooth-parser}"/>
             <src path="${dir.build.java.task-matcher-parser}"/>
@@ -160,10 +161,11 @@
 
     <target name="compile.slib.java" depends="compile.main.java">
         <javac destdir="${dir.build.class.slib.java}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.slib.java}"/>
             <classpath>
                 <path refid="classpath-for.slib.java"/>
@@ -188,10 +190,11 @@
 
     <target name="compile.testing.java" depends="compile.main.java">
         <javac destdir="${dir.build.class.testing.java}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.testing.java}"/>
             <classpath>
                 <path refid="classpath-for.testing.java"/>
@@ -226,10 +229,11 @@
 
     <target name="compile.main.test" depends="compile.testing.java">
         <javac destdir="${dir.build.class.main.test}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.main.test}"/>
             <classpath>
                 <path refid="classpath-for.main.test"/>
@@ -252,10 +256,11 @@
 
     <target name="compile.slib.test" depends="compile.slib.java, compile.testing.java">
         <javac destdir="${dir.build.class.slib.test}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.slib.test}"/>
             <classpath>
                 <path refid="classpath-for.slib.test"/>
@@ -277,10 +282,11 @@
 
     <target name="compile.testing.test" depends="compile.testing.java">
         <javac destdir="${dir.build.class.testing.test}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.testing.test}"/>
             <classpath>
                 <path refid="classpath-for.testing.test"/>
@@ -303,10 +309,11 @@
 
     <target name="compile.acceptance.tests" depends="compile.testing.java">
         <javac destdir="${dir.build.class.acceptance}"
-               source="16"
+               source="17"
                debug="true"
                includeantruntime="false"
                debuglevel="lines,vars,source">
+            <compilerarg value="--enable-preview"/>
             <src path="${dir.src.acceptance}"/>
             <classpath>
                 <path refid="classpath.for.acceptance"/>
